--- a/vercel.json
+++ b/vercel.json
@@ -4,19 +4,6 @@
     "builds": [{"src": "./index.js",
                 "use": "@vercel/node"}],
     "routes": [{"src": "/(.*)",
-                "dest": "/"}],
-    "headers": [
-                    {
-                      "key": "Access-Control-Allow-Origin",
-                      "value": "https://gala-go-tau.vercel.app"
-                    },
-                    {
-                      "key": "Access-Control-Allow-Methods",
-                      "value": "GET,POST,PUT,DELETE"
-                    },
-                    {
-                      "key": "Access-Control-Allow-Headers",
-                      "value": "Content-Type, Authorization"
-                    }
-                  ]
+                "dest": "/"}]
+    
 }
