--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
     "builds": [{"src": "./index.js",
                 "use": "@vercel/node"}],
     "routes": [{"src": "/(.*)",
-                "dest": "/"}]
+    "dest": "./index.js",
+    "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+    "headers": {
+      "Access-Control-Allow-Origin": "*"}}]
     
 }
+
