--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,12 @@
     "routes": [{"src": "/(.*)",
     "dest": "./index.js",
     "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-    "headers": [
+    "headers": {
+      "Access-Control-Allow-Origin": "*"}
+  
+      }],
+
+      "headers": [
         {
           "source": "/api/(.*)",
           "headers": [
@@ -16,7 +21,7 @@
             { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
           ]
         }
-      ]}]
+      ]
     
 }
 
