--- a/vercel.json
+++ b/vercel.json
@@ -4,14 +4,9 @@
     "builds": [{"src": "./index.js",
                 "use": "@vercel/node"}],
     "routes": [{"src": "/(.*)",
-    "dest": "./index.js",
-    "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-    "headers": {
-      "Access-Control-Allow-Origin": "*"}
-  
-      }],
+    "dest": "./index.js"}],
 
-      "headers": [
+      "headers": [ 
         {
           "source": "/api/(.*)",
           "headers": [
